Fixed game over text wrapping in FF31.

--- a/tictac/static/css/coxtactoe.css
+++ b/tictac/static/css/coxtactoe.css
@@ -135,7 +135,7 @@ p {
   opacity: 0;
   text-shadow: 0 5px 0 #000,0 -5px 0 #000,-5px 0 0 #000,5px 0 0 #000,5px 5px 0 #000,-5px -5px 0 #000,5px -5px 0 #000,-5px 5px 0 #000;
   text-stroke: 3px #f66;
-  width: 320px;
+  width: 322px;
 }
 
 .error { color: #f66 }
